ws-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-service
  labels:
    app: ws-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-service
  template:
    metadata:
      labels:
        app: ws-service
    spec:
      containers:
        - name: ws-container
          image: codingsprints/mern-space-ws-service-prod:build-4
          ports:
            - containerPort: 5004
          volumeMounts:
            - name: ws-secret
              mountPath: "/home/node/app/config"
              readOnly: true
      volumes:
        - name: ws-secret
          secret:
            secretName: ws-secret

---
apiVersion: v1
kind: Service
metadata:
  name: ws-service
spec:
  selector:
    app: ws-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
